[package]
edition = "2021"
name = "graph"
version = "0.3.0"

[dependencies]
actix-web = { version = "4.5", default-features = false, features = ["macros"] }
async-graphql-actix-web = { version = "7.0" }
async-graphql = { version = "7.0", features = [
    "decimal",
    "chrono",
    "dataloader",
    "dynamic-schema",
] }
dotenv = "0.15"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "seaography",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
lazy_static = { version = "1.4" }

[dependencies.seaography]
git = "https://github.com/Cupnfish/seaography.git"
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }
